<resources>
    <string name="app_name">TestApp</string>
    <string name="menu_profile">我的</string>
    <string name="menu_commodity">商品</string>
    <string name="menu_add">发布商品</string>

    <string name="title_login_register">登录</string>
    <string name="action_get_verify_code">获取验证码</string>
    <string name="action_delete_item">下架</string>

    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="title_user_register">用户注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="hint_please_input_password">请输入密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">密码或验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入4位数验证码</string>
    <string name="regex_verify_code">^\\d{4}$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shopper_name">卖家名称</string>
    <string name="trade_success">交易成功</string>
    <string name="payment">实付款 ￥</string>
    <string name="commodity_info">商品信息：</string>
    <string name="collect">收藏</string>
    <string name="comment">留言</string>
    <string name="add_request">我想要</string>

</resources>