<?xml version="1.0" encoding="utf-8"?><!--商品详情页面-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.xuexiang.xui.widget.actionbar.TitleBar
        android:id="@+id/titleBar_commodity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tb_barHeight="45dp"
        app:tb_dividerColor="@color/xui_config_color_red"
        app:tb_leftImageResource="@drawable/ic_navigation_back_white"
        app:tb_titleText="商品详情" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@mipmap/ic_preview" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="卖家："
                android:textColor="@color/xui_config_color_75_pure_black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/owner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:maxLines="2"
                android:text=" "
                android:textAlignment="center"
                android:textColor="@color/xui_config_color_75_pure_black"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/item_inf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/commodity_info"
            android:textColor="@color/xui_config_color_60_pure_black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/xui_config_color_pure_black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/com_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/xui_config_color_red"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/sc"
            android:text="@string/collect"
            android:textColor="@color/xui_config_color_75_pure_black"
            android:layout_marginStart="5dp"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/sc"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_collection" />

        <Button
            android:id="@+id/ly"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/wxy"
            android:background="@color/xui_config_color_50_blue"
            android:text="@string/comment"
            android:textColor="@android:color/white" />

        <com.xuexiang.xui.widget.button.ButtonView
            android:id="@+id/wxy"
            android:layout_width="80dp"
            android:paddingTop="15dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            app:textSolidColor="@color/menu_red_normal"
            app:textSelectedSolidColor="@color/menu_red_pressed"
            android:textAlignment="center"
            android:text="@string/add_request"
            android:textSize="18sp"
            android:textColor="@color/xui_config_color_white" />

    </RelativeLayout>


</LinearLayout>